# cccv

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cccv-docker-compose.yml  pyproject.toml  vs-docker-compose.yml
.github/workflows/: CI-test.yml  Release.yml
cccv/: __init__.py
cccv/arch/: __init__.py  basicvsr_arch.py  dat_arch.py  edsr_arch.py  edvr_arch.py  hat_arch.py  iconvsr_arch.py  msrswvsr_arch.py  srvgg_arch.py  swinir_arch.py
cccv/arch/sr/: dat_arch.py  upcunet_arch.py
cccv/arch/vfi/: drba_arch.py  ifnet_arch.py
cccv/auto/: config.py  model.py
cccv/cache_models/: __init__.py
cccv/config/: __init__.py  animesr_config.py  base_config.py  basicvsr_config.py  dat_config.py  edsr_config.py  edvr_config.py  hat_config.py  iconvsr_config.py  realcugan_config.py  realesrgan_config.py  scunet_config.py  spynet_config.py  srcnn_config.py  swinir_config.py
cccv/config/sr/: dat_config.py  edsr_config.py  hat_config.py  realcugan_config.py  realesrgan_config.py  scunet_config.py  srcnn_config.py  swinir_config.py
cccv/config/vfi/: drba_config.py  rife_config.py
cccv/config/vsr/: animesr_config.py  edvr_config.py
cccv/model/: __init__.py  animesr_model.py  auxiliary_base_model.py  base_model.py  basicvsr_model.py  edsr_model.py  edvr_model.py  iconvsr_model.py  realesrgan_model.py  scunet_model.py  sr_base_model.py  srcnn_model.py  vfi_base_model.py  vsr_base_model.py
cccv/model/sr/: dat_model.py  hat_model.py  realcugan_model.py  swinir_model.py
cccv/model/vfi/: drba_model.py  rife_model.py
cccv/model/vsr/: edvr_model.py
cccv/type/: __init__.py  arch.py  base_config.py  base_model.py  config.py  model.py
cccv/util/: device.py  registry.py  remote.py
cccv/vs/: __init__.py  vfi.py  vsr.py
ccrestoration/arch/: hat_arch.py  swinir_arch.py
ccrestoration/vs/: __init__.py
example/: auto.py  register.py  remote.py  sisr.py  sr_vs.py  vapoursynth.py  vfi_vs.py  vsr.py  vsr_vs.py
tests/: __init__.py  test_animesr.py  test_auto_class.py  test_basicvsr.py  test_cache_models.py  test_dat.py  test_edsr.py  test_edvr.py  test_hat.py  test_iconvsr.py  test_realcugan.py  test_realesrgan.py  test_remote.py  test_scunet.py  test_spynet.py  test_sr.py  test_srcnn.py  test_swinir.py  test_tile.py  test_type.py  test_util.py  util.py
tests/auxnet/: test_spynet.py
tests/sr/: test_dat.py  test_edsr.py  test_hat.py  test_realcugan.py  test_realesrgan.py  test_scunet.py  test_sr.py  test_srcnn.py  test_swinir.py
tests/vfi/: test_drba.py  test_rife.py  test_util.py
tests/vsr/: test_animesr.py  test_edvr.py
